--- a/index.html
+++ b/index.html
@@ -1,1 +1,99 @@
-<h1> SAIF MBARKI | Senior DevSecOps </h1>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Saif Mbarki | Senior DevSecOps & Cloud Engineer">
+    <title>Saif Mbarki - Senior DevSecOps & Cloud Engineer</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gray-900 text-white">
+    <!-- Navigation -->
+    <header class="bg-gray-800">
+        <div class="container mx-auto flex justify-between items-center py-4 px-8">
+            <div class="text-xl font-bold">Saif Mbarki</div>
+            <nav>
+                <ul class="flex space-x-4">
+                    <li><a href="#about" class="hover:text-gray-400">À Propos</a></li>
+                    <li><a href="#skills" class="hover:text-gray-400">Compétences</a></li>
+                    <li><a href="#projects" class="hover:text-gray-400">Projets</a></li>
+                    <li><a href="#contact" class="hover:text-gray-400">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <!-- Hero Section -->
+    <section id="hero" class="bg-gray-900 h-screen flex items-center justify-center">
+        <div class="text-center">
+            <h1 class="text-4xl md:text-6xl font-bold mb-4">Senior DevSecOps & Cloud Engineer</h1>
+            <p class="text-xl text-gray-300 mb-6">Expert en sécurité, développement cloud, et CI/CD</p>
+            <a href="#contact" class="bg-blue-600 text-white py-3 px-6 rounded-full font-semibold hover:bg-blue-500">Travaillons Ensemble</a>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="py-20 bg-gray-800">
+        <div class="container mx-auto px-8 text-center">
+            <h2 class="text-4xl font-bold mb-8">À Propos de Moi</h2>
+            <p class="text-gray-400 max-w-3xl mx-auto">
+                Je suis Saif Mbarki, ingénieur senior en DevSecOps et Cloud avec 6 ans d'expérience. Mon expertise couvre les domaines du développement sécurisé, de l'optimisation des pipelines CI/CD et de l'administration cloud. Passionné par la sécurité et l'efficacité des infrastructures cloud, j'aide les entreprises à innover tout en assurant leur sécurité.
+            </p>
+        </div>
+    </section>
+
+    <!-- Skills Section -->
+    <section id="skills" class="py-20 bg-gray-900">
+        <div class="container mx-auto px-8">
+            <h2 class="text-4xl font-bold mb-8 text-center">Compétences</h2>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                <div class="bg-gray-800 p-6 rounded-lg text-center">
+                    <h3 class="text-2xl font-semibold mb-4">Cloud & Infrastructure</h3>
+                    <p class="text-gray-400">AWS, Kubernetes, Docker</p>
+                </div>
+                <div class="bg-gray-800 p-6 rounded-lg text-center">
+                    <h3 class="text-2xl font-semibold mb-4">DevSecOps</h3>
+                    <p class="text-gray-400">CI/CD, Sécurité des Applications, Automatisation</p>
+                </div>
+                <div class="bg-gray-800 p-6 rounded-lg text-center">
+                    <h3 class="text-2xl font-semibold mb-4">Programmation</h3>
+                    <p class="text-gray-400">Java, Python, Bash</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects" class="py-20 bg-gray-800">
+        <div class="container mx-auto px-8 text-center">
+            <h2 class="text-4xl font-bold mb-8">Projets Récents</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <div class="bg-gray-900 p-6 rounded-lg">
+                    <h3 class="text-2xl font-semibold mb-4">Déploiement EKS sécurisé avec Terraform</h3>
+                    <p class="text-gray-400">Mise en place d'une infrastructure cloud robuste et scalable, avec intégration des meilleures pratiques de sécurité.</p>
+                </div>
+                <div class="bg-gray-900 p-6 rounded-lg">
+                    <h3 class="text-2xl font-semibold mb-4">Pipeline CI/CD sécurisé pour Microservices</h3>
+                    <p class="text-gray-400">Automatisation des tests de sécurité et du déploiement continu des conteneurs Docker sous Kubernetes.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="py-20 bg-gray-900">
+        <div class="container mx-auto px-8 text-center">
+            <h2 class="text-4xl font-bold mb-8">Me Contacter</h2>
+            <p class="text-gray-400 mb-6">Je suis disponible pour des missions freelance ou pour discuter de nouvelles opportunités.</p>
+            <a href="mailto:email@example.com" class="bg-blue-600 text-white py-3 px-6 rounded-full font-semibold hover:bg-blue-500">Envoyer un Email</a>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-gray-800 py-6">
+        <div class="container mx-auto text-center">
+            <p class="text-gray-400">&copy; 2024 Saif Mbarki. Tous droits réservés.</p>
+        </div>
+    </footer>
+</body>
+</html>
