--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
     </section>
 
-    <!-- About Section -->
+    <!-- About Section s -->
     <section id="about" class="py-20 bg-gray-800">
         <div class="container mx-auto px-8 text-center">
             <h2 class="text-4xl font-bold mb-8">À Propos de Moi</h2>
