--- a/index.html
+++ b/index.html
@@ -42,6 +42,71 @@
         </div>
     </section>
 
+
+
+    <!-- Skills Section -->
+<section id="skills" class="py-20 bg-gray-900">
+    <div class="container mx-auto px-8">
+        <h2 class="text-4xl font-bold mb-8 text-center">Compétences</h2>
+        <div class="grid grid-cols-2 md:grid-cols-4 gap-8">
+            <div class="flex flex-col items-center">
+                <img src="path/to/spring-logo.png" alt="Spring" class="h-16 mb-2">
+                <p class="text-gray-400">Spring</p>
+            </div>
+            <div class="flex flex-col items-center">
+                <img src="path/to/kafka-logo.png" alt="Kafka" class="h-16 mb-2">
+                <p class="text-gray-400">Kafka</p>
+            </div>
+            <div class="flex flex-col items-center">
+                <img src="path/to/jenkins-logo.png" alt="Jenkins" class="h-16 mb-2">
+                <p class="text-gray-400">Jenkins</p>
+            </div>
+            <div class="flex flex-col items-center">
+                <img src="path/to/kubernetes-logo.png" alt="Kubernetes" class="h-16 mb-2">
+                <p class="text-gray-400">Kubernetes</p>
+            </div>
+            <div class="flex flex-col items-center">
+                <img src="path/to/docker-logo.png" alt="Docker" class="h-16 mb-2">
+                <p class="text-gray-400">Docker</p>
+            </div>
+            <div class="flex flex-col items-center">
+                <img src="path/to/ansible-logo.png" alt="Ansible" class="h-16 mb-2">
+                <p class="text-gray-400">Ansible</p>
+            </div>
+            <div class="flex flex-col items-center">
+                <img src="path/to/terraform-logo.png" alt="Terraform" class="h-16 mb-2">
+                <p class="text-gray-400">Terraform</p>
+            </div>
+            <div class="flex flex-col items-center">
+                <img src="path/to/aws-logo.png" alt="AWS" class="h-16 mb-2">
+                <p class="text-gray-400">AWS</p>
+            </div>
+            <div class="flex flex-col items-center">
+                <img src="path/to/wazuh-logo.png" alt="Wazuh" class="h-16 mb-2">
+                <p class="text-gray-400">Wazuh</p>
+            </div>
+            <div class="flex flex-col items-center">
+                <img src="path/to/prometheus-logo.png" alt="Prometheus" class="h-16 mb-2">
+                <p class="text-gray-400">Prometheus</p>
+            </div>
+            <div class="flex flex-col items-center">
+                <img src="path/to/grafana-logo.png" alt="Grafana" class="h-16 mb-2">
+                <p class="text-gray-400">Grafana</p>
+            </div>
+            <div class="flex flex-col items-center">
+                <img src="path/to/gdpr-logo.png" alt="GDPR" class="h-16 mb-2">
+                <p class="text-gray-400">GDPR</p>
+            </div>
+            <div class="flex flex-col items-center">
+                <img src="path/to/iso27001-logo.png" alt="ISO 27001" class="h-16 mb-2">
+                <p class="text-gray-400">ISO 27001</p>
+            </div>
+            <!-- Ajoute d'autres logos ici -->
+        </div>
+    </div>
+</section>
+
+    
     <!-- Skills Section -->
     <section id="skills" class="py-20 bg-gray-900">
         <div class="container mx-auto px-8">
