--- a/index.html
+++ b/index.html
@@ -50,55 +50,55 @@
         <h2 class="text-4xl font-bold mb-8 text-center">Compétences</h2>
         <div class="grid grid-cols-2 md:grid-cols-4 gap-8">
             <div class="flex flex-col items-center">
-                <img src="path/to/spring-logo.png" alt="Spring" class="h-16 mb-2">
+                <img src="https://www.google.com/imgres?q=logos%20spring&imgurl=https%3A%2F%2Ficon2.cleanpng.com%2F20180328%2Fbbw%2Favoyatpnk.webp&imgrefurl=https%3A%2F%2Fwww.cleanpng.com%2Fpng-spring-framework-representational-state-transfer-j-6037231%2F&docid=H0m5yBZC-2FKoM&tbnid=1ezckY7LZSLjlM&vet=12ahUKEwiwusWsnqCJAxXWVaQEHdSfHqsQM3oECB0QAA..i&w=400&h=360&hcb=2&ved=2ahUKEwiwusWsnqCJAxXWVaQEHdSfHqsQM3oECB0QAA" alt="Spring" class="h-16 mb-2">
                 <p class="text-gray-400">Spring</p>
             </div>
             <div class="flex flex-col items-center">
-                <img src="path/to/kafka-logo.png" alt="Kafka" class="h-16 mb-2">
+                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Flogovectordl.com%2Fapache-kafka-logo-vector-svg%2F&psig=AOvVaw33YP5w3Z_B3nBslN0B_iQa&ust=1729626402555000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCICd1M2eoIkDFQAAAAAdAAAAABAEg" alt="Kafka" class="h-16 mb-2">
                 <p class="text-gray-400">Kafka</p>
             </div>
             <div class="flex flex-col items-center">
-                <img src="path/to/jenkins-logo.png" alt="Jenkins" class="h-16 mb-2">
+                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcommons.wikimedia.org%2Fwiki%2FFile%3AJenkins_logo.svg&psig=AOvVaw20HMUtLck1qDh5ACzM_w9O&ust=1729626431394000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCLDvttqeoIkDFQAAAAAdAAAAABAE" alt="Jenkins" class="h-16 mb-2">
                 <p class="text-gray-400">Jenkins</p>
             </div>
             <div class="flex flex-col items-center">
-                <img src="path/to/kubernetes-logo.png" alt="Kubernetes" class="h-16 mb-2">
+                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fen.m.wikipedia.org%2Fwiki%2FFile%3AKubernetes_logo_without_workmark.svg&psig=AOvVaw39dN9c0cLDb3y-fUT6flQW&ust=1729626455820000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCMiBt-WeoIkDFQAAAAAdAAAAABAE" alt="Kubernetes" class="h-16 mb-2">
                 <p class="text-gray-400">Kubernetes</p>
             </div>
             <div class="flex flex-col items-center">
-                <img src="path/to/docker-logo.png" alt="Docker" class="h-16 mb-2">
+                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcdnlogo.com%2Flogo%2Fdocker_41325.html&psig=AOvVaw0vO_J_iuwexgTtwM_tqloA&ust=1729626477813000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCPC3xfCeoIkDFQAAAAAdAAAAABAE" alt="Docker" class="h-16 mb-2">
                 <p class="text-gray-400">Docker</p>
             </div>
             <div class="flex flex-col items-center">
-                <img src="path/to/ansible-logo.png" alt="Ansible" class="h-16 mb-2">
+                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fen.m.wikipedia.org%2Fwiki%2FFile%3AAnsible_logo.svg&psig=AOvVaw3_ccn7W8bS1ALKeUJQ9Lfs&ust=1729626502283000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCLDwo_yeoIkDFQAAAAAdAAAAABAE" alt="Ansible" class="h-16 mb-2">
                 <p class="text-gray-400">Ansible</p>
             </div>
             <div class="flex flex-col items-center">
-                <img src="path/to/terraform-logo.png" alt="Terraform" class="h-16 mb-2">
+                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.tritondatacenter.com%2Fblog%2Fvideo-simple-terraform-app&psig=AOvVaw074c5hLvJ-mZ4J0rbGjnJQ&ust=1729626523689000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJjNvYafoIkDFQAAAAAdAAAAABAQ" alt="Terraform" class="h-16 mb-2">
                 <p class="text-gray-400">Terraform</p>
             </div>
             <div class="flex flex-col items-center">
-                <img src="path/to/aws-logo.png" alt="AWS" class="h-16 mb-2">
+                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcommons.wikimedia.org%2Fwiki%2FFile%3AAmazon_Web_Services_Logo.svg&psig=AOvVaw21iiTVMclrEW-c7y9YJsJ7&ust=1729626557340000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCPj785WfoIkDFQAAAAAdAAAAABAE" alt="AWS" class="h-16 mb-2">
                 <p class="text-gray-400">AWS</p>
             </div>
             <div class="flex flex-col items-center">
-                <img src="path/to/wazuh-logo.png" alt="Wazuh" class="h-16 mb-2">
+                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwroberts.me%2F%3Fp%3D443&psig=AOvVaw3JwReZOGInYwzmRJJRV_xj&ust=1729626579139000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCNig5qCfoIkDFQAAAAAdAAAAABAE" alt="Wazuh" class="h-16 mb-2">
                 <p class="text-gray-400">Wazuh</p>
             </div>
             <div class="flex flex-col items-center">
-                <img src="path/to/prometheus-logo.png" alt="Prometheus" class="h-16 mb-2">
+                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fstablediffusionweb.com%2Ffr%2Fprompts%2Fprometheus-logos&psig=AOvVaw05_VyeY9RJQHiBTFnoLRhg&ust=1729626609395000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCKDOoq-foIkDFQAAAAAdAAAAABAE" alt="Prometheus" class="h-16 mb-2">
                 <p class="text-gray-400">Prometheus</p>
             </div>
             <div class="flex flex-col items-center">
-                <img src="path/to/grafana-logo.png" alt="Grafana" class="h-16 mb-2">
+                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.clipartmax.com%2Fmiddle%2Fm2H7d3Z5Z5b1G6Z5_grafana-prometheus-grafana-logo%2F&psig=AOvVaw3DBxbNfiUV3efbyWPMF6zr&ust=1729626631989000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCPDTrrqfoIkDFQAAAAAdAAAAABAE" alt="Grafana" class="h-16 mb-2">
                 <p class="text-gray-400">Grafana</p>
             </div>
             <div class="flex flex-col items-center">
-                <img src="path/to/gdpr-logo.png" alt="GDPR" class="h-16 mb-2">
+                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fillustrations%2Fgdpr&psig=AOvVaw33GkE9Rsj27pwE4g8ZsPrd&ust=1729626656681000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCKiLrcWfoIkDFQAAAAAdAAAAABAE" alt="GDPR" class="h-16 mb-2">
                 <p class="text-gray-400">GDPR</p>
             </div>
             <div class="flex flex-col items-center">
-                <img src="path/to/iso27001-logo.png" alt="ISO 27001" class="h-16 mb-2">
+                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fm.indiamart.com%2Fproddetail%2Fiso-27000-consultancy-service-22560205062.html&psig=AOvVaw1c2FJ8Ss2qm1yW2z7sssZY&ust=1729626680902000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJj_8tCfoIkDFQAAAAAdAAAAABAK" alt="ISO 27001" class="h-16 mb-2">
                 <p class="text-gray-400">ISO 27001</p>
             </div>
             <!-- Ajoute d'autres logos ici -->
