--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <p class="text-gray-400">GDPR</p>
             </div>
             <div class="flex flex-col items-center">
-                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fm.indiamart.com%2Fproddetail%2Fiso-27000-consultancy-service-22560205062.html&psig=AOvVaw1c2FJ8Ss2qm1yW2z7sssZY&ust=1729626680902000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJj_8tCfoIkDFQAAAAAdAAAAABAK" alt="ISO 27001" class="h-16 mb-2">
+                <img src="https://5.imimg.com/data5/SELLER/Default/2020/8/BX/JM/OY/30610646/iso-27000-consultancy-service-500x500.jpg" alt="ISO 27001" class="h-16 mb-2">
                 <p class="text-gray-400">ISO 27001</p>
             </div>
             <!-- Ajoute d'autres logos ici -->
